[package]
name = "plaque"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["http1", "tcp", "server"] }
opentelemetry = { version = "0.17.0", features = ["rt-tokio"] }
opentelemetry-jaeger = { version = "0.16.0", features = ["rt-tokio"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1.32"
tracing-chrome = "0.5.0"
tracing-opentelemetry = "0.17.2"
tracing-subscriber = { version = "0.3.9", features = ["env-filter", "json"] }
tracing-tree = "0.2.0"
